make student list

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <!-- Search Bar -->
-  <div class="px-4 py-2">
+  <div class="px-4 py-2 w-[19vw]">
     <input type="text" placeholder="Search" class="w-full p-2 rounded-full border" />
   </div>
 
@@ -48,16 +48,7 @@
           Questions
         </a>
       </li>
-      <li>
-        <a routerLink="profile" routerLinkActive="bg-purple-200 text-purple-800 font-medium"
-          class="flex items-center p-3 text-gray-600 rounded-lg hover:bg-purple-200 hover:text-purple-700 transition-colors group block">
-          <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd">
-            </path>
-          </svg>
-          Profile
-        </a>
-      </li>
+
       <li>
         <a routerLink="users" routerLinkActive="bg-purple-200 text-purple-800 font-medium"
           class="flex items-center p-3 text-gray-600 rounded-lg hover:bg-purple-200 hover:text-purple-700 transition-colors group block">
@@ -79,6 +70,16 @@
               clip-rule="evenodd" />
           </svg>
           Results
+        </a>
+      </li>
+      <li>
+        <a routerLink="profile" routerLinkActive="bg-purple-200 text-purple-800 font-medium"
+          class="flex items-center p-3 text-gray-600 rounded-lg hover:bg-purple-200 hover:text-purple-700 transition-colors group block">
+          <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" d="M10 9a3 3 0 100-6 3 3 0 000 6zm-7 9a7 7 0 1114 0H3z" clip-rule="evenodd">
+            </path>
+          </svg>
+          Profile
         </a>
       </li>
     </ul>
