--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -10,8 +10,8 @@
         d="M17.133 12.632v-1.8a5.407 5.407 0 0 0-4.154-5.262.955.955 0 0 0 .021-.106V3.1a1 1 0 0 0-2 0v2.364a.933.933 0 0 0 .021.106 5.406 5.406 0 0 0-4.154 5.262v1.8C6.867 15.018 5 15.614 5 16.807 5 17.4 5 18 5.538 18h12.924C19 18 19 17.4 19 16.807c0-1.193-1.867-1.789-1.867-4.175Zm-13.267-.8a1 1 0 0 1-1-1 9.424 9.424 0 0 1 2.517-6.391A1.001 1.001 0 1 1 6.854 5.8a7.43 7.43 0 0 0-1.988 5.037 1 1 0 0 1-1 .995Zm16.268 0a1 1 0 0 1-1-1A7.431 7.431 0 0 0 17.146 5.8a1 1 0 0 1 1.471-1.354 9.424 9.424 0 0 1 2.517 6.391 1 1 0 0 1-1 .995ZM8.823 19a3.453 3.453 0 0 0 6.354 0H8.823Z" />
     </svg>
     <button
-      class="bg-purple-700 text-white px-4 py-2 rounded-lg hover:bg-purple-800 transition duration-200 flex items-center"><svg
-        class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+      class="bg-purple-700 text-white px-4 py-2 rounded-lg hover:bg-purple-800 transition duration-200 flex items-center" (click)="navToAddUser()"  ><svg
+        class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" >
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
       </svg> Add Students</button>
     <i class="fas fa-bell text-gray-600"></i>
