change component name

--- a/src/app/pages/home-student/home-student.component.html
+++ b/src/app/pages/home-student/home-student.component.html
@@ -24,7 +24,7 @@
                 </div>
             </div>
             <div class="rounded-lg bg-white shadow-md dark:bg-gray-800 p-4 flex items-center justify-center">
-                <div id="pie-chart" class="w-full max-h-[300px] sm:max-h-[400px] aspect-square visible">
+                <div #pieChart class="w-full max-h-[300px] sm:max-h-[400px] aspect-square visible">
                     @if (!chartLoaded) {
                     <p class="text-blue-600 dark:text-blue-400 text-center mt-6">
                         Chart is loading...
