--- a/src/app/pages/admin-dashboard/users/users-list/users-list.component.html
+++ b/src/app/pages/admin-dashboard/users/users-list/users-list.component.html
@@ -31,12 +31,12 @@
                     <th scope="col" class="px-6 py-3">
                         Active Exams
                     </th>
-                    <th scope="col" class="px-6 py-3">
+                    <!-- <th scope="col" class="px-6 py-3">
                         Total Score
                     </th>
                     <th scope="col" class="px-6 py-3">
                         level&semster
-                    </th>
+                    </th> -->
                     <th scope="col" class="px-6 py-3">
                         Action
                     </th>
@@ -66,15 +66,15 @@
                         <td class="px-6 py-4">
                             {{item.activeExmas}}
                         </td>
-                        <td class="px-6 py-4">
+                        <!-- <td class="px-6 py-4">
                             {{item.totalScore}}
                         </td>
                         <td class="px-6 py-4">
                             {{item.levelAndSemster}}
-                        </td>
+                        </td> -->
                         <td class="flex items-center px-6 py-4">
-                            <a href="#" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
-                            <a href="#" class="font-medium text-red-600 dark:text-red-500 hover:underline ms-3">Remove</a>
+                            <a href="#" (click)="goToEditPage(item.email)" class="font-medium text-blue-600 dark:text-blue-500 hover:underline">Edit</a>
+                            <a href="#" (click)="deleteUser(item.email)" class="font-medium text-red-600 dark:text-red-500 hover:underline ms-3">Remove</a>
                         </td>
                     </tr>
                 }
