connect register API and redesign login and register

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col h-full bg-purple-100 fixed">
+<div clatext-3xl font-bold text-purple-800ss="flex flex-col h-full bg-purple-100 fixed">
   <!-- Logo -->
   <div class="p-4 flex items-center">
     <img src="logo.png" alt="Tabor Study Logo" class="h-12 w-12 mr-2" />
-    <span class="text-3xl font-bold text-purple-800">Examy</span>
+    <span class="">Examy</span>
   </div>
 
   <!-- Search Bar -->
