--- a/src/app/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/components/user-sidebar/user-sidebar.component.html
@@ -13,14 +13,14 @@
     aria-label="Sidebar">
     <div class="h-full px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800">
         <a [routerLink]="['/homeStudent']" class="flex items-center ps-2.5 mb-5">
-            <img src="https://flowbite.com/docs/images/logo.svg" class="h-6 me-3 sm:h-7" alt="Flowbite Logo" />
-            <span class="self-center text-3xl text-indigo-700 font-semibold whitespace-nowrap dark:text-white">Examo</span>
+            <img src="logo.png" class="h-12 w-12 mr-2" alt="Flowbite Logo" />
+            <span class="self-center text-3xl text-purple-700 font-semibold whitespace-nowrap dark:text-white">Examy</span>
         </a>
         <ul class="space-y-2 font-medium">
             <li>
-                <a [routerLink]="['/homeStudent/main']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/main']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -31,9 +31,9 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/profile']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/profile']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -44,9 +44,9 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/notifications']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/notifications']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -55,13 +55,13 @@
                     </svg>
                     <span class="flex-1 ms-3 whitespace-nowrap">Notifications</span>
                     <span
-                        class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-blue-800 bg-blue-100 rounded-full dark:bg-blue-900 dark:text-blue-300">3</span>
+                        class="inline-flex items-center justify-center w-3 h-3 p-3 ms-3 text-sm font-medium text-purple-800 bg-purple-100 rounded-full dark:bg-blue-900 dark:text-blue-300">3</span>
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/exams']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/exams']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -72,9 +72,9 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/results']" [routerLinkActive]="'text-primary-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
+                <a [routerLink]="['/homeStudent/results']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
+                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -87,9 +87,9 @@
         </ul>
         <ul class="pt-4 mt-4 space-y-2 font-medium border-t border-gray-200 dark:border-gray-700">
             <li>
-                <a href="#"
-                    class="flex items-center p-2 text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 dark:text-white group">
-                    <svg class="w-[28px] h-[28px] text-primary-700 dark:text-white" aria-hidden="true"
+                <a (click)="logout()"
+                    class="flex items-center cursor-pointer p-2 text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 dark:text-white group">
+                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path d="M14 19V5h4a1 1 0 0 1 1 1v11h1a1 1 0 0 1 0 2h-6Z" />
