--- a/src/app/pages/home-student/home-student.component.html
+++ b/src/app/pages/home-student/home-student.component.html
@@ -4,15 +4,15 @@
             <div class="flex flex-col gap-2 sm:gap-4 justify-between">
                 <div
                     class="flex flex-col items-center justify-center p-4 rounded-lg bg-white shadow-md dark:bg-gray-800 h-1/3 min-h-[100px]">
-                    <h2 class="text-lg sm:text-xl lg:text-2xl font-semibold text-blue-600 dark:text-blue-400">Taken
+                    <h2 class="text-lg sm:text-xl lg:text-2xl font-semibold text-blue-500 dark:text-blue-400">Taken
                         Exams</h2>
-                    <p class="text-lg sm:text-xl lg:text-2xl text-blue-600 dark:text-blue-400">{{ numberOfExams }}</p>
+                    <p class="text-lg sm:text-xl lg:text-2xl text-blue-500 dark:text-blue-400">{{ numberOfExams }}</p>
                 </div>
                 <div
                     class="flex flex-col items-center justify-center p-4 rounded-lg bg-white shadow-md dark:bg-gray-800 h-1/3 min-h-[100px]">
-                    <h2 class="text-lg sm:text-xl lg:text-2xl font-semibold text-green-500 dark:text-green-400">Passed
+                    <h2 class="text-lg sm:text-xl lg:text-2xl font-semibold text-teal-500 dark:text-green-400">Passed
                         Exams</h2>
-                    <p class="text-lg sm:text-xl lg:text-2xl text-green-500 dark:text-green-400">{{ numberOfPassedExams
+                    <p class="text-lg sm:text-xl lg:text-2xl text-teal-500 dark:text-green-400">{{ numberOfPassedExams
                         }}</p>
                 </div>
                 <div
@@ -26,7 +26,7 @@
             <div class="rounded-lg bg-white shadow-md dark:bg-gray-800 p-4 flex items-center justify-center">
                 <div #pieChart class="w-full max-h-[300px] sm:max-h-[400px] aspect-square visible">
                     @if (!chartLoaded) {
-                    <p class="text-blue-600 dark:text-blue-400 text-center mt-6">
+                    <p class="text-purple-500 dark:text-blue-400 text-center mt-6">
                         Chart is loading...
                     </p>
                     }
@@ -37,12 +37,12 @@
         <div class="min-h-[240px] py-6 rounded-lg bg-white shadow-md dark:bg-gray-800 flex items-center justify-center">
             <div class="max-w-2xl">
                 <h2
-                    class="text-3xl font-bold text-blue-600 dark:text-blue-400 text-center mb-6 border-b-2 border-blue-600 dark:border-blue-400 pb-2">
+                    class="text-3xl font-bold text-purple-500 dark:text-blue-400 text-center mb-6 border-b-2 border-purple-500 dark:border-blue-400 pb-2">
                     Exam Instructions
                 </h2>
                 <ul class="text-gray-600 dark:text-gray-300 text-lg space-y-2 text-left">
                     <li class="flex items-start">
-                        <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
+                        <svg class="w-5 h-5 text-purple-500 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
@@ -51,7 +51,7 @@
                             answering.</span>
                     </li>
                     <li class="flex items-start">
-                        <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
+                        <svg class="w-5 h-5 text-purple-500 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
@@ -60,7 +60,7 @@
                             questions.</span>
                     </li>
                     <li class="flex items-start">
-                        <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
+                        <svg class="w-5 h-5 text-purple-500 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
@@ -69,7 +69,7 @@
                             connection and charged device.</span>
                     </li>
                     <li class="flex items-start">
-                        <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
+                        <svg class="w-5 h-5 text-purple-500 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
@@ -78,7 +78,7 @@
                             the exam.</span>
                     </li>
                     <li class="flex items-start">
-                        <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
+                        <svg class="w-5 h-5 text-purple-500 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
@@ -87,7 +87,7 @@
                             back/forward.</span>
                     </li>
                     <li class="flex items-start">
-                        <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
+                        <svg class="w-5 h-5 text-purple-500 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
@@ -96,7 +96,7 @@
                             expires.</span>
                     </li>
                     <li class="flex items-start">
-                        <svg class="w-5 h-5 text-blue-600 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
+                        <svg class="w-5 h-5 text-purple-500 dark:text-blue-400 mr-2 mt-1 flex-shrink-0" aria-hidden="true"
                             xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                             <path
                                 d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5Zm3.707 8.207-4 4a1 1 0 0 1-1.414 0l-2-2a1 1 0 0 1 1.414-1.414L9 10.586l3.293-3.293a1 1 0 0 1 1.414 1.414Z" />
