--- a/src/app/pages/reset-password/reset-password.component.html
+++ b/src/app/pages/reset-password/reset-password.component.html
@@ -1,12 +1,12 @@
 <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
-        <span class="flex items-center mb-6 text-3xl font-semibold text-gray-900 dark:text-white">
-            <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
-            Examo
+        <span class="flex items-center mb-2 text-3xl font-bold text-purple-800 dark:text-white">
+            <img class="w-20 h-20" src="logo.png" alt="logo">
+            Examy
         </span>
         <div
             class="w-full p-6 bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md dark:bg-gray-800 dark:border-gray-700 sm:p-8">
-            <h2 class="mb-1 text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+            <h2 class="mb-1 text-xl font-bold leading-tight tracking-tight text-purple-800 md:text-2xl dark:text-white">
                 Reset Your Password
             </h2>
             <form class="mt-4 space-y-4 lg:mt-5 md:space-y-5" [formGroup]="resetPasswordForm"
@@ -71,7 +71,7 @@
                     }
                 </div>
                 <button type="submit" [disabled]="resetPasswordForm.invalid || isSubmitting"
-                    class="w-full text-white bg-blue-600 hover:bg-blue-800 focus:ring-2 focus:ring-blue-500 focus:outline-none shadow-md hover:shadow-lg font-semibold rounded-lg text-base px-6 py-3 mt-5 text-center transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed dark:bg-blue-700 dark:hover:bg-blue-600 dark:focus:ring-blue-500">
+                    class="w-full text-white bg-purple-700 hover:bg-purple-800 focus:ring-2 focus:ring-purple-500 focus:outline-none shadow-md hover:shadow-lg font-semibold rounded-lg text-base px-6 py-3 mt-5 text-center transition-all duration-300 disabled:opacity-50 disabled:cursor-not-allowed dark:bg-blue-700 dark:hover:bg-blue-600 dark:focus:ring-blue-500">
                     {{ isSubmitting ? 'Resetting...' : 'Reset Password' }}
                 </button>
             </form>
