--- a/src/app/shared/subject-grades-card/subject-grades-card.component.html
+++ b/src/app/shared/subject-grades-card/subject-grades-card.component.html
@@ -1,7 +1,7 @@
 <div
     class="bg-white dark:bg-gray-800 p-4 rounded-lg text-center shadow-sm transition-all duration-200 h-48 flex flex-col">
     @if (subject) {
-    <h3 class="font-semibold text-2xl text-primary-600 dark:text-gray-200 mb-3">{{ subject.subjectName }}</h3>
+    <h3 class="font-semibold text-2xl text-purple-600 dark:text-gray-200 mb-3">{{ subject.subjectName }}</h3>
     <div class="flex-1 grid grid-cols-2 gap-4">
         <!-- Exam Names Column -->
         <div class="flex flex-col justify-center space-y-4">
